# Baegun

./: .gitignore  AGENTS.md  ANALYSIS.md  APP_REVIEW.md  CICD.md  Cargo.toml  GUI_PLAN.md  README.md  awesome.md  build_macos_app.sh  bulk_convert_and_delete.sh  bulk_convert_and_delete_comic.sh  package-lock.json  package.json  pyproject.toml  sol.md  vite.config.js
.github/workflows/: ci.yml  release.yml
crates/baegun-cli/: Cargo.toml
crates/baegun-cli/src/: main.rs
crates/baegun-core/: Cargo.toml
crates/baegun-core/src/: cache.rs  cbz.rs  epub.rs  errors.rs  lib.rs  llamaparse.rs  metadata.rs  mistral.rs  models.rs  normalize.rs  output.rs  provider.rs  validate.rs
crates/baegun-core/tests/: convert_integration.rs
crates/baegun-core/tests/fixtures/: ocr_payload_sample.json
docs/: ocr-providers.md  unlimited-ocr-provider.md
media-sources/: icon.af
scripts/: release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  system_colors.rs  updates.rs
src/baegun/: __init__.py  cache.py  cli.py  comic.py  config.py  cover.py  epub_builder.py  gui.py  mistral_client.py  models.py  normalize.py  render.py  structure.py  utils.py  validate.py
src/lib/: tauri.ts  types.ts  updateChecker.ts  windowManager.ts
src/lib/components/: UpdateNotice.svelte
src/lib/util/: notifications.ts
src/routes/: +layout.svelte  +page.svelte
tests/: conftest.py  test_cache.py  test_cli.py  test_comic.py  test_config.py  test_cover.py  test_epub_builder.py  test_mistral_client.py  test_normalize.py  test_pipeline_smoke.py  test_render.py  test_structure.py  test_validate.py
tests/fixtures/: sample_ocr_payload.json
