[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "baegun"
version = "0.1.0"
description = "PDF to EPUB CLI converter powered by Mistral OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "mistralai>=1.5",
  "pydantic>=2.7",
  "markdown>=3.6",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "ebooklib>=0.18",
  "pypdfium2>=4.30",
  "pillow>=10.0",
  "tenacity>=8.5",
]

[project.optional-dependencies]
gui = [
  "customtkinter>=5.2",
  "tkinterdnd2-universal>=0.3",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
baegun = "baegun.cli:app"
baegun-gui = "baegun.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baegun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=baegun --cov-report=term-missing"
